[package]
name = "jenkins-plugin-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
# Memoized functions.
cached = "0.55.1"
# Command line argument parsing.
clap = { version = "4.5.7", features = ["env", "derive", "wrap_help"] }
# Allow us to derive verbosity from command line arguments.
clap-verbosity-flag = "2.2.0"
dependency-graph = "0.1.5"
dirs-next = "2.0.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
# A generalized logger.
log = "0.4.21"
# Pretty terminal colors.
owo-colors = "4.0.0"
# Regular expressions.
regex = "1.11.1"
# Make HTTP requests.
reqwest = { version = "0.12.15", features = ["blocking"] }
semver = { version = "1.0.26", features = ["serde"] }
# Generalized serialization/deserialization.
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
# Send our logs to stderr to unclutter stdout's actual output.
stderrlog = "0.6.0"
# Like inspect, but on everything.
tap = "1.0.1"
# Decompress the Jenkins Plugins files.
zip = "2.6.1"
